[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wmscraper4000"
version = "0.1.26"
description = "A Python package for web scraping"
authors = [{name = "RLH"}]
dependencies = [
    "requests",
    "pymongo",
    "tenacity"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]